--- a/pipe/gitlab-ci.yaml
+++ b/pipe/gitlab-ci.yaml
@@ -72,8 +72,7 @@ test-frontend:
   script:
     - cd frontend
     - npm ci --cache .npm --prefer-offline
-    - npm run lint --if-present || echo "Lint not configured"
-    - npx jest --ci --coverage --passWithNoTests
+    - npm test
   artifacts:
     when: always
   needs: ["build-frontend"]
