--- a/pipe/gitlab-ci.yaml
+++ b/pipe/gitlab-ci.yaml
@@ -16,6 +16,8 @@ variables:
   DOCKER_HUB_FRONTEND_REPO: "khkhlv/messenger-frontend"
   DOCKER_IMAGE_TAG: "$CI_COMMIT_SHORT_SHA"
   DOCKER_HUB_USER: "khkhlv"
+  TELEGRAM_BOT_TOKEN: $TELEGRAM_BOT_TOKEN
+  TELEGRAM_CHAT_ID: $TELEGRAM_CHAT_ID
 
 cache:
   key: maven
@@ -143,3 +145,67 @@ docker:
 
   after_script:
     - docker logout
+
+# ====== Уведомления ======
+.notify_template: &notify_template |
+  STATUS_ICON="⚠️"
+  STATUS_TEXT="НЕИЗВЕСТЕН"
+  if [ "$STATUS" = "success" ]; then
+    STATUS_ICON="✅"
+    STATUS_TEXT="УСПЕШНО"
+  elif [ "$STATUS" = "failed" ]; then
+    STATUS_ICON="❌"
+    STATUS_TEXT="ПРОВАЛ"
+  fi
+  
+  MESSAGE="\
+  ${STATUS_ICON} Pipeline #${CI_PIPELINE_ID} — ${STATUS_TEXT}
+  
+  📦 Проект: ${CI_PROJECT_NAME}
+  🌿 Ветка: ${CI_COMMIT_REF_NAME}
+  💡 Commit: ${CI_COMMIT_SHORT_SHA}
+  👤 Автор: ${GITLAB_USER_NAME:-unknown}
+  
+  🧪 Job: ${CI_JOB_NAME}
+  ⏱ Длительность: ${CI_JOB_DURATION:-N/A} сек
+  
+  🔗 Посмотреть: ${CI_PIPELINE_URL}"
+  
+  curl -s -X POST "https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/sendMessage" \
+    -d chat_id="${TELEGRAM_CHAT_ID}" \
+    -d text="${MESSAGE}" \
+    -d parse_mode="HTML" > /dev/null || echo "Не удалось отправить уведомление в Telegram"
+
+notify_on_success:
+  stage: notify
+  image: alpine:latest
+  tags:
+    - messenger
+  before_script:
+    - apk add --no-cache curl
+  script:
+    - STATUS="success" eval "$NOTIFY_SCRIPT"
+  variables:
+    NOTIFY_SCRIPT: *notify_template
+  rules:
+    - if: $CI_PIPELINE_STATUS == "success"
+      when: always
+  allow_failure: true
+  needs: ["docker"]
+
+notify_on_failure:
+  stage: notify
+  image: alpine:latest
+  tags:
+    - messenger
+  before_script:
+    - apk add --no-cache curl
+  script:
+    - STATUS="failed" eval "$NOTIFY_SCRIPT"
+  variables:
+    NOTIFY_SCRIPT: *notify_template
+  rules:
+    - if: $CI_PIPELINE_STATUS == "failed"
+      when: always
+  allow_failure: true
+  needs: ["build-backend", "build-frontend", "test-backend", "test-frontend", "docker"]
