--- a/pipe/gitlab-ci.yaml
+++ b/pipe/gitlab-ci.yaml
@@ -148,36 +148,6 @@ docker:
   after_script:
     - docker logout
 
-# ====== Уведомления ======
-.notify_template: &notify_template |
-  STATUS_ICON="⚠️"
-  STATUS_TEXT="НЕИЗВЕСТЕН"
-  if [ "$STATUS" = "success" ]; then
-    STATUS_ICON="✅"
-    STATUS_TEXT="УСПЕШНО"
-  elif [ "$STATUS" = "failed" ]; then
-    STATUS_ICON="❌"
-    STATUS_TEXT="ПРОВАЛ"
-  fi
-  
-  MESSAGE="\
-  ${STATUS_ICON} Pipeline #${CI_PIPELINE_ID} — ${STATUS_TEXT}
-  
-  📦 Проект: ${CI_PROJECT_NAME}
-  🌿 Ветка: ${CI_COMMIT_REF_NAME}
-  💡 Commit: ${CI_COMMIT_SHORT_SHA}
-  👤 Автор: ${GITLAB_USER_NAME:-unknown}
-  
-  🧪 Job: ${CI_JOB_NAME}
-  ⏱ Длительность: ${CI_JOB_DURATION:-N/A} сек
-  
-  🔗 Посмотреть: ${CI_PIPELINE_URL}"
-  
-  curl -s -X POST "https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/sendMessage" \
-    -d chat_id="${TELEGRAM_CHAT_ID}" \
-    -d text="${MESSAGE}" \
-    -d parse_mode="HTML" > /dev/null || echo "Не удалось отправить уведомление в Telegram"
-
 notify_on_success:
   stage: notify
   image: alpine:latest
@@ -186,12 +156,22 @@ notify_on_success:
   before_script:
     - apk add --no-cache curl
   script:
-    - STATUS="success" eval "$NOTIFY_SCRIPT"
-  variables:
-    NOTIFY_SCRIPT: *notify_template
+    - |
+      MESSAGE="✅ Pipeline #${CI_PIPELINE_ID} — УСПЕШНО
+      📦 Проект: ${CI_PROJECT_NAME}
+      🌿 Ветка: ${CI_COMMIT_REF_NAME}
+      💡 Commit: ${CI_COMMIT_SHORT_SHA}
+      👤 Автор: ${GITLAB_USER_NAME:-unknown}
+      ⏱ Длительность: ${CI_PIPELINE_DURATION:-N/A} сек
+        🔗 ${CI_PIPELINE_URL}"
+  
+      curl -s -X POST "https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/sendMessage" \
+      -d "chat_id=${TELEGRAM_CHAT_ID}" \
+      -d "text=${MESSAGE}" || echo "⚠️ Ошибка отправки в Telegram"
   when: on_success
   allow_failure: true
-  needs: ["docker"]
+  needs:
+    - docker
 
 notify_on_failure:
   stage: notify
@@ -201,9 +181,20 @@ notify_on_failure:
   before_script:
     - apk add --no-cache curl
   script:
-    - STATUS="failed" eval "$NOTIFY_SCRIPT"
-  variables:
-    NOTIFY_SCRIPT: *notify_template
-  when: on_success
+    - |
+      MESSAGE="❌ Pipeline #${CI_PIPELINE_ID} — ПРОВАЛ
+      📦 Проект: ${CI_PROJECT_NAME}
+      🌿 Ветка: ${CI_COMMIT_REF_NAME}
+      💡 Commit: ${CI_COMMIT_SHORT_SHA}
+      👤 Автор: ${GITLAB_USER_NAME:-unknown}
+      ⚠️ Статус: ${CI_PIPELINE_STATUS}
+        🔗 ${CI_PIPELINE_URL}"
+  
+      curl -s -X POST "https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/sendMessage" \
+      -d "chat_id=${TELEGRAM_CHAT_ID}" \
+      -d "text=${MESSAGE}" || echo "⚠️ Ошибка отправки в Telegram"
+  when: on_failure
   allow_failure: true
-  needs: ["build-backend", "build-frontend", "test-backend", "test-frontend", "docker"]
+  needs:
+    - job: ["build-backend", "build-frontend", "test-backend", "test-frontend", "docker"]
+      optional: true
