--- a/pipe/gitlab-ci.yaml
+++ b/pipe/gitlab-ci.yaml
@@ -18,8 +18,6 @@ variables:
   DOCKER_HUB_FRONTEND_REPO: "khkhlv/messenger-frontend"
   DOCKER_IMAGE_TAG: "$CI_COMMIT_SHORT_SHA"
   DOCKER_HUB_USER: "khkhlv"
-  TELEGRAM_BOT_TOKEN: "$TELEGRAM_BOT_TOKEN"
-  TELEGRAM_CHAT_ID: "$TELEGRAM_CHAT_ID"
 
 cache:
   key: maven
@@ -165,12 +163,22 @@ notify_on_success:
       Длительность: ${CI_PIPELINE_DURATION:-N/A} сек
       ${CI_PIPELINE_URL}"
       
+      echo "=== ПРОВЕРКА ПЕРЕМЕННЫХ ==="
+      echo "TELEGRAM_BOT_TOKEN длина: ${#TELEGRAM_BOT_TOKEN}"
+      echo "TELEGRAM_CHAT_ID длина: ${#TELEGRAM_CHAT_ID}"
+      if [ -z "$TELEGRAM_BOT_TOKEN" ] || [ -z "$TELEGRAM_CHAT_ID" ]; then
+        echo "❌ ОШИБКА: Переменные TELEGRAM не заданы в GitLab CI/CD Variables!"
+        echo "Зайдите: Settings → CI/CD → Variables и добавьте их"
+        exit 1
+      fi
+      
+      echo "✅ Переменные найдены. Тестовый запрос к Telegram..."
+      curl -s "https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/getMe" | grep -o '"ok":true' && echo "✅ Бот авторизован" || echo "❌ Ошибка авторизации бота"
+      
       curl -s -X POST "https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/sendMessage" \
       -d "chat_id=${TELEGRAM_CHAT_ID}" \
       -d "text=${MESSAGE}"
-      
-      echo "${TELEGRAM_CHAT_ID}"
-      echo "${TELEGRAM_BOT_TOKEN}"
+
   when: on_success
   allow_failure: true
   needs:
