--- a/pipe/gitlab-ci.yaml
+++ b/pipe/gitlab-ci.yaml
@@ -1,8 +1,8 @@
 stages:
   - build
   - test
-  #  - sonar-check
-  #  - quality-check
+    - sonar-check
+    - quality-check
   - docker
   - notify
 
@@ -79,51 +79,51 @@ test-frontend:
     when: always
   needs: ["build-frontend"]
 
-#sonar-check:
-#  image: maven:3-openjdk-18
-#  stage: sonar-check
-#  tags:
-#    - messenger
-#  script:
-#    - mvn verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.tests=src/test/java/ru/khkhlv -Dsonar.organization=$SONAR_ORGANIZATION -Dsonar.projectKey=$SONAR_PROJECT_KEY -Dsonar.host.url=$SONAR_HOST_URL -Dsonar.login=$SONAR_TOKEN -Dsonar.sources=src/main/java -Dsonar.tests=src/test/java -Dsonar.java.binaries=target/classes -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
-#  dependencies:
-#    - test
-#
-#check-metrics:
-#  image: praqma/network-multitool:latest
-#  stage: quality-check
-#  tags:
-#    - messenger
-#  before_script:
-#    - apk add --no-cache jq curl bc
-#  script:
-#    - |
-#      echo "Waiting for SonarQube analysis to be available..."
-#      sleep 10
-#
-#      PROJECT_KEY="$SONAR_PROJECT_KEY"
-#      MAX_ATTEMPTS=5
-#      ATTEMPT=0
-#
-#      while [ $ATTEMPT -lt $MAX_ATTEMPTS ]; do
-#        STATUS=$(curl -s -u "$SONAR_TOKEN": "$SONAR_HOST_URL/api/qualitygates/project_status?projectKey=$PROJECT_KEY" | jq -r '.projectStatus.status')
-#        echo "$STATUS"
-#        if [ "$STATUS" = "OK" ]; then
-#          echo "✅ Quality Gate passed"
-#          break
-#        elif [ "$STATUS" = "ERROR" ]; then
-#          echo "❌ Quality Gate failed"
-#          exit 1
-#        fi
-#        sleep 10
-#        ATTEMPT=$((ATTEMPT+1))
-#      done
-#
-#      if [ $ATTEMPT -eq $MAX_ATTEMPTS ]; then
-#        echo "⏰ Timeout waiting for Quality Gate"
-#        exit 1
-#      fi
-#
+sonar-check:
+  image: maven:3-openjdk-18
+  stage: sonar-check
+  tags:
+    - messenger
+  script:
+    - mvn verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.tests=src/test/java/ru/khkhlv -Dsonar.organization=$SONAR_ORGANIZATION -Dsonar.projectKey=$SONAR_PROJECT_KEY -Dsonar.host.url=$SONAR_HOST_URL -Dsonar.login=$SONAR_TOKEN -Dsonar.sources=src/main/java -Dsonar.tests=src/test/java -Dsonar.java.binaries=target/classes -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
+  dependencies:
+    - test
+
+check-metrics:
+  image: praqma/network-multitool:latest
+  stage: quality-check
+  tags:
+    - messenger
+  before_script:
+    - apk add --no-cache jq curl bc
+  script:
+    - |
+      echo "Waiting for SonarQube analysis to be available..."
+      sleep 10
+
+      PROJECT_KEY="$SONAR_PROJECT_KEY"
+      MAX_ATTEMPTS=5
+      ATTEMPT=0
+
+      while [ $ATTEMPT -lt $MAX_ATTEMPTS ]; do
+        STATUS=$(curl -s -u "$SONAR_TOKEN": "$SONAR_HOST_URL/api/qualitygates/project_status?projectKey=$PROJECT_KEY" | jq -r '.projectStatus.status')
+        echo "$STATUS"
+        if [ "$STATUS" = "OK" ]; then
+          echo "✅ Quality Gate passed"
+          break
+        elif [ "$STATUS" = "ERROR" ]; then
+          echo "❌ Quality Gate failed"
+          exit 1
+        fi
+        sleep 10
+        ATTEMPT=$((ATTEMPT+1))
+      done
+
+      if [ $ATTEMPT -eq $MAX_ATTEMPTS ]; then
+        echo "⏰ Timeout waiting for Quality Gate"
+        exit 1
+      fi
+
 ## Сборка и пуш Docker-образа
 docker:
   stage: docker
@@ -160,20 +160,7 @@ notify_on_success:
       Ветка: ${CI_COMMIT_REF_NAME}
       Commit: ${CI_COMMIT_SHORT_SHA}
       Автор: ${GITLAB_USER_NAME:-unknown}
-      Длительность: ${CI_PIPELINE_DURATION:-N/A} сек
       ${CI_PIPELINE_URL}"
-      
-      echo "=== ПРОВЕРКА ПЕРЕМЕННЫХ ==="
-      echo "TELEGRAM_BOT_TOKEN длина: ${#TELEGRAM_BOT_TOKEN}"
-      echo "TELEGRAM_CHAT_ID длина: ${#TELEGRAM_CHAT_ID}"
-      if [ -z "$TELEGRAM_BOT_TOKEN" ] || [ -z "$TELEGRAM_CHAT_ID" ]; then
-        echo "❌ ОШИБКА: Переменные TELEGRAM не заданы в GitLab CI/CD Variables!"
-        echo "Зайдите: Settings → CI/CD → Variables и добавьте их"
-        exit 1
-      fi
-      
-      echo "✅ Переменные найдены. Тестовый запрос к Telegram..."
-      curl -s "https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/getMe" | grep -o '"ok":true' && echo "✅ Бот авторизован" || echo "❌ Ошибка авторизации бота"
       
       curl -s -X POST "https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/sendMessage" \
       -d "chat_id=${TELEGRAM_CHAT_ID}" \
