--- a/pipe/gitlab-ci.yaml
+++ b/pipe/gitlab-ci.yaml
@@ -87,7 +87,9 @@ sonar-check:
   script:
     - mvn verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.tests=src/test/java/ru/khkhlv -Dsonar.organization=$SONAR_ORGANIZATION -Dsonar.projectKey=$SONAR_PROJECT_KEY -Dsonar.host.url=$SONAR_HOST_URL -Dsonar.login=$SONAR_TOKEN -Dsonar.sources=src/main/java -Dsonar.tests=src/test/java -Dsonar.java.binaries=target/classes -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
   dependencies:
-    - test
+    - test-backend
+  needs:
+    - test-backend
 
 check-metrics:
   image: praqma/network-multitool:latest
@@ -142,7 +144,6 @@ docker:
     - docker push "$DOCKER_HUB_BACKEND_REPO:latest"
     - docker build -t "$DOCKER_HUB_FRONTEND_REPO:latest" -f frontend/Dockerfile frontend/
     - docker push "$DOCKER_HUB_FRONTEND_REPO:latest"
-
   after_script:
     - docker logout
 
