--- a/pipe/gitlab-ci.yaml
+++ b/pipe/gitlab-ci.yaml
@@ -1,9 +1,10 @@
 stages:
-  - build
-  - test
-  - sonar-check
-  - quality-check
+#  - build
+#  - test
+#  - sonar-check
+#  - quality-check
   - docker
+  - deploy
   - notify
 
 
@@ -18,113 +19,116 @@ variables:
   DOCKER_HUB_FRONTEND_REPO: "khkhlv/messenger-frontend"
   DOCKER_IMAGE_TAG: "$CI_COMMIT_SHORT_SHA"
   DOCKER_HUB_USER: "khkhlv"
+  ARGOCD_USERNAME: "admin"
+  ARGOCD_PASSWORD: "u9ZAESKII0lrCVoV"
+  ARGOCD_SERVER: "https://localhost:8000"
 
 cache:
   key: maven
   paths:
     - .m2/repository
 
-build-backend:
-  image: maven:3.8.6-openjdk-18
-  stage: build
-  tags:
-    - messenger
-  script:
-    - mvn $MAVEN_CLI_OPTS clean package -DskipTests
-  artifacts:
-    paths:
-      - target/*.jar
-    expire_in: 1 day
+#build-backend:
+#  image: maven:3.8.6-openjdk-18
+#  stage: build
+#  tags:
+#    - messenger
+#  script:
+#    - mvn $MAVEN_CLI_OPTS clean package -DskipTests
+#  artifacts:
+#    paths:
+#      - target/*.jar
+#    expire_in: 1 day
+#
+#build-frontend:
+#  image: node:20
+#  stage: build
+#  tags:
+#    - messenger
+#  before_script:
+#    - cd frontend
+#    - npm ci
+#  script:
+#    - npm run build
+#  artifacts:
+#    paths:
+#      - frontend/dist/
+#    expire_in: 1 hour
+#
+#test-backend:
+#  image: maven:3.8.6-openjdk-18
+#  stage: test
+#  tags:
+#    - messenger
+#  script:
+#    - mvn $MAVEN_CLI_OPTS test
+#    - mvn test jacoco:report
+#  artifacts:
+#    paths:
+#      - target/site/jacoco/jacoco.xml
+#    reports:
+#      junit: target/surefire-reports/*.xml
+#  needs: ["build-backend"]
+#
+#test-frontend:
+#  image: node:20
+#  stage: test
+#  tags:
+#    - messenger
+#  script:
+#    - cd frontend
+#    - npm ci --cache .npm --prefer-offline
+#    - npm test
+#  artifacts:
+#    when: always
+#  needs: ["build-frontend"]
 
-build-frontend:
-  image: node:20
-  stage: build
-  tags:
-    - messenger
-  before_script:
-    - cd frontend
-    - npm ci
-  script:
-    - npm run build
-  artifacts:
-    paths:
-      - frontend/dist/
-    expire_in: 1 hour
-
-test-backend:
-  image: maven:3.8.6-openjdk-18
-  stage: test
-  tags:
-    - messenger
-  script:
-    - mvn $MAVEN_CLI_OPTS test
-    - mvn test jacoco:report
-  artifacts:
-    paths:
-      - target/site/jacoco/jacoco.xml
-    reports:
-      junit: target/surefire-reports/*.xml
-  needs: ["build-backend"]
-
-test-frontend:
-  image: node:20
-  stage: test
-  tags:
-    - messenger
-  script:
-    - cd frontend
-    - npm ci --cache .npm --prefer-offline
-    - npm test
-  artifacts:
-    when: always
-  needs: ["build-frontend"]
-
-sonar-check:
-  image: maven:3.8.6-openjdk-18
-  stage: sonar-check
-  tags:
-    - messenger
-  script:
-    - mvn verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.scanner.skipJreProvisioning=true -Dsonar.tests=src/test/java/ru/khkhlv -Dsonar.organization=$SONAR_ORGANIZATION -Dsonar.projectKey=$SONAR_PROJECT_KEY -Dsonar.host.url=$SONAR_HOST_URL -Dsonar.login=$SONAR_TOKEN -Dsonar.sources=src/main/java -Dsonar.tests=src/test/java -Dsonar.java.binaries=target/classes -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
-  dependencies:
-    - test-backend
-  needs:
-    - test-backend
-
-check-metrics:
-  image: praqma/network-multitool:latest
-  stage: quality-check
-  tags:
-    - messenger
-  before_script:
-    - apk add --no-cache jq curl bc
-  script:
-    - |
-      echo "Waiting for SonarQube analysis to be available..."
-      sleep 10
-
-      PROJECT_KEY="$SONAR_PROJECT_KEY"
-      MAX_ATTEMPTS=5
-      ATTEMPT=0
-
-      while [ $ATTEMPT -lt $MAX_ATTEMPTS ]; do
-        STATUS=$(curl -s -u "$SONAR_TOKEN": "$SONAR_HOST_URL/api/qualitygates/project_status?projectKey=$PROJECT_KEY" | jq -r '.projectStatus.status')
-        echo "$STATUS"
-        if [ "$STATUS" = "OK" ]; then
-          echo "✅ Quality Gate passed"
-          break
-        elif [ "$STATUS" = "ERROR" ]; then
-          echo "❌ Quality Gate failed"
-          exit 1
-        fi
-        sleep 10
-        ATTEMPT=$((ATTEMPT+1))
-      done
-
-      if [ $ATTEMPT -eq $MAX_ATTEMPTS ]; then
-        echo "⏰ Timeout waiting for Quality Gate"
-        exit 1
-      fi
+#sonar-check:
+#  image: maven:3.8.6-openjdk-18
+#  stage: sonar-check
+#  tags:
+#    - messenger
+#  script:
+#    - mvn verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.scanner.skipJreProvisioning=true -Dsonar.tests=src/test/java/ru/khkhlv -Dsonar.organization=$SONAR_ORGANIZATION -Dsonar.projectKey=$SONAR_PROJECT_KEY -Dsonar.host.url=$SONAR_HOST_URL -Dsonar.login=$SONAR_TOKEN -Dsonar.sources=src/main/java -Dsonar.tests=src/test/java -Dsonar.java.binaries=target/classes -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
+#  dependencies:
+#    - test-backend
+#  needs:
+#    - test-backend
+#
+#check-metrics:
+#  image: praqma/network-multitool:latest
+#  stage: quality-check
+#  tags:
+#    - messenger
+#  before_script:
+#    - apk add --no-cache jq curl bc
+#  script:
+#    - |
+#      echo "Waiting for SonarQube analysis to be available..."
+#      sleep 10
+#
+#      PROJECT_KEY="$SONAR_PROJECT_KEY"
+#      MAX_ATTEMPTS=5
+#      ATTEMPT=0
+#
+#      while [ $ATTEMPT -lt $MAX_ATTEMPTS ]; do
+#        STATUS=$(curl -s -u "$SONAR_TOKEN": "$SONAR_HOST_URL/api/qualitygates/project_status?projectKey=$PROJECT_KEY" | jq -r '.projectStatus.status')
+#        echo "$STATUS"
+#        if [ "$STATUS" = "OK" ]; then
+#          echo "✅ Quality Gate passed"
+#          break
+#        elif [ "$STATUS" = "ERROR" ]; then
+#          echo "❌ Quality Gate failed"
+#          exit 1
+#        fi
+#        sleep 10
+#        ATTEMPT=$((ATTEMPT+1))
+#      done
+#
+#      if [ $ATTEMPT -eq $MAX_ATTEMPTS ]; then
+#        echo "⏰ Timeout waiting for Quality Gate"
+#        exit 1
+#      fi
 
 ## Сборка и пуш Docker-образа
 docker:
@@ -140,12 +144,50 @@ docker:
   before_script:
     - echo "$DOCKER_HUB_TOKEN" | docker login -u "$DOCKER_HUB_USER" --password-stdin
   script:
-    - docker build -t "$DOCKER_HUB_BACKEND_REPO:latest" .
+    # Backend
+    - docker build -t "$DOCKER_HUB_BACKEND_REPO:$CI_COMMIT_SHORT_SHA" .
+    - docker push "$DOCKER_HUB_BACKEND_REPO:$CI_COMMIT_SHORT_SHA"
+    - docker tag "$DOCKER_HUB_BACKEND_REPO:$CI_COMMIT_SHORT_SHA" "$DOCKER_HUB_BACKEND_REPO:latest"
     - docker push "$DOCKER_HUB_BACKEND_REPO:latest"
-    - docker build -t "$DOCKER_HUB_FRONTEND_REPO:latest" -f frontend/Dockerfile frontend/
+
+    # Frontend
+    - docker build -t "$DOCKER_HUB_FRONTEND_REPO:$CI_COMMIT_SHORT_SHA" -f frontend/Dockerfile frontend/
+    - docker push "$DOCKER_HUB_FRONTEND_REPO:$CI_COMMIT_SHORT_SHA"
+    - docker tag "$DOCKER_HUB_FRONTEND_REPO:$CI_COMMIT_SHORT_SHA" "$DOCKER_HUB_FRONTEND_REPO:latest"
     - docker push "$DOCKER_HUB_FRONTEND_REPO:latest"
   after_script:
     - docker logout
+
+deploy:
+  stage: deploy
+  image: alpine/k8s:1.28.4
+  before_script:
+    - apk add --no-cache curl git
+    - curl -sSL -o /usr/local/bin/argocd https://github.com/argoproj/argo-cd/releases/latest/download/argocd-linux-amd64
+    - chmod +x /usr/local/bin/argocd
+  script:
+    - |
+      cd manifests
+      for file in *-deployment.yaml; do
+        if grep -q "deploy.kubernetes.io/hash" "$file"; then
+          sed -i "s/deploy.kubernetes.io\/hash: .*/deploy.kubernetes.io\/hash: $CI_COMMIT_SHORT_SHA/" "$file"
+        else
+          # Если аннотация ещё не добавлена — вставляем её после строки с "spec:"
+          sed -i "/spec:/a\      annotations:\n        deploy.kubernetes.io/hash: $CI_COMMIT_SHORT_SHA" "$file"
+        fi
+      done
+      cd ..
+
+    - |
+      argocd login $ARGOCD_SERVER \
+        --username $ARGOCD_USERNAME \
+        --password $ARGOCD_PASSWORD \
+        --insecure
+
+    - argocd app sync messenger-app --force
+    - argocd app wait messenger-app --health --timeout 300
+  rules:
+    - if: $CI_COMMIT_BRANCH == "master"
 
 notify_on_success:
   stage: notify
