--- a/pipe/gitlab-ci.yaml
+++ b/pipe/gitlab-ci.yaml
@@ -160,6 +160,8 @@ docker:
 deploy:
   stage: deploy
   image: quay.io/argoproj/argocd:latest
+  tags:
+    - messenger
   script:
     - argocd login "$ARGOCD_SERVER" --username "$ARGOCD_USERNAME" --password "$ARGOCD_PASSWORD" --insecure
     - argocd app sync messenger-app --force
