--- a/pipe/gitlab-ci.yaml
+++ b/pipe/gitlab-ci.yaml
@@ -1,8 +1,8 @@
 stages:
-#  - build
-#  - test
-#  - sonar-check
-#  - quality-check
+  - build
+  - test
+  - sonar-check
+  - quality-check
   - docker
   - deploy
   - notify
@@ -28,107 +28,107 @@ cache:
   paths:
     - .m2/repository
 
-#build-backend:
-#  image: maven:3.8.6-openjdk-18
-#  stage: build
-#  tags:
-#    - messenger
-#  script:
-#    - mvn $MAVEN_CLI_OPTS clean package -DskipTests
-#  artifacts:
-#    paths:
-#      - target/*.jar
-#    expire_in: 1 day
-#
-#build-frontend:
-#  image: node:20
-#  stage: build
-#  tags:
-#    - messenger
-#  before_script:
-#    - cd frontend
-#    - npm ci
-#  script:
-#    - npm run build
-#  artifacts:
-#    paths:
-#      - frontend/dist/
-#    expire_in: 1 hour
-#
-#test-backend:
-#  image: maven:3.8.6-openjdk-18
-#  stage: test
-#  tags:
-#    - messenger
-#  script:
-#    - mvn $MAVEN_CLI_OPTS test
-#    - mvn test jacoco:report
-#  artifacts:
-#    paths:
-#      - target/site/jacoco/jacoco.xml
-#    reports:
-#      junit: target/surefire-reports/*.xml
-#  needs: ["build-backend"]
-#
-#test-frontend:
-#  image: node:20
-#  stage: test
-#  tags:
-#    - messenger
-#  script:
-#    - cd frontend
-#    - npm ci --cache .npm --prefer-offline
-#    - npm test
-#  artifacts:
-#    when: always
-#  needs: ["build-frontend"]
+build-backend:
+  image: maven:3.8.6-openjdk-18
+  stage: build
+  tags:
+    - messenger
+  script:
+    - mvn $MAVEN_CLI_OPTS clean package -DskipTests
+  artifacts:
+    paths:
+      - target/*.jar
+    expire_in: 1 day
 
-#sonar-check:
-#  image: maven:3.8.6-openjdk-18
-#  stage: sonar-check
-#  tags:
-#    - messenger
-#  script:
-#    - mvn verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.scanner.skipJreProvisioning=true -Dsonar.tests=src/test/java/ru/khkhlv -Dsonar.organization=$SONAR_ORGANIZATION -Dsonar.projectKey=$SONAR_PROJECT_KEY -Dsonar.host.url=$SONAR_HOST_URL -Dsonar.login=$SONAR_TOKEN -Dsonar.sources=src/main/java -Dsonar.tests=src/test/java -Dsonar.java.binaries=target/classes -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
-#  dependencies:
-#    - test-backend
-#  needs:
-#    - test-backend
-#
-#check-metrics:
-#  image: praqma/network-multitool:latest
-#  stage: quality-check
-#  tags:
-#    - messenger
-#  before_script:
-#    - apk add --no-cache jq curl bc
-#  script:
-#    - |
-#      echo "Waiting for SonarQube analysis to be available..."
-#      sleep 10
-#
-#      PROJECT_KEY="$SONAR_PROJECT_KEY"
-#      MAX_ATTEMPTS=5
-#      ATTEMPT=0
-#
-#      while [ $ATTEMPT -lt $MAX_ATTEMPTS ]; do
-#        STATUS=$(curl -s -u "$SONAR_TOKEN": "$SONAR_HOST_URL/api/qualitygates/project_status?projectKey=$PROJECT_KEY" | jq -r '.projectStatus.status')
-#        echo "$STATUS"
-#        if [ "$STATUS" = "OK" ]; then
-#          echo "✅ Quality Gate passed"
-#          break
-#        elif [ "$STATUS" = "ERROR" ]; then
-#          echo "❌ Quality Gate failed"
-#          exit 1
-#        fi
-#        sleep 10
-#        ATTEMPT=$((ATTEMPT+1))
-#      done
-#
-#      if [ $ATTEMPT -eq $MAX_ATTEMPTS ]; then
-#        echo "⏰ Timeout waiting for Quality Gate"
-#        exit 1
-#      fi
+build-frontend:
+  image: node:20
+  stage: build
+  tags:
+    - messenger
+  before_script:
+    - cd frontend
+    - npm ci
+  script:
+    - npm run build
+  artifacts:
+    paths:
+      - frontend/dist/
+    expire_in: 1 hour
+
+test-backend:
+  image: maven:3.8.6-openjdk-18
+  stage: test
+  tags:
+    - messenger
+  script:
+    - mvn $MAVEN_CLI_OPTS test
+    - mvn test jacoco:report
+  artifacts:
+    paths:
+      - target/site/jacoco/jacoco.xml
+    reports:
+      junit: target/surefire-reports/*.xml
+  needs: ["build-backend"]
+
+test-frontend:
+  image: node:20
+  stage: test
+  tags:
+    - messenger
+  script:
+    - cd frontend
+    - npm ci --cache .npm --prefer-offline
+    - npm test
+  artifacts:
+    when: always
+  needs: ["build-frontend"]
+
+sonar-check:
+  image: maven:3.8.6-openjdk-18
+  stage: sonar-check
+  tags:
+    - messenger
+  script:
+    - mvn verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.scanner.skipJreProvisioning=true -Dsonar.tests=src/test/java/ru/khkhlv -Dsonar.organization=$SONAR_ORGANIZATION -Dsonar.projectKey=$SONAR_PROJECT_KEY -Dsonar.host.url=$SONAR_HOST_URL -Dsonar.login=$SONAR_TOKEN -Dsonar.sources=src/main/java -Dsonar.tests=src/test/java -Dsonar.java.binaries=target/classes -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
+  dependencies:
+    - test-backend
+  needs:
+    - test-backend
+
+check-metrics:
+  image: praqma/network-multitool:latest
+  stage: quality-check
+  tags:
+    - messenger
+  before_script:
+    - apk add --no-cache jq curl bc
+  script:
+    - |
+      echo "Waiting for SonarQube analysis to be available..."
+      sleep 10
+
+      PROJECT_KEY="$SONAR_PROJECT_KEY"
+      MAX_ATTEMPTS=5
+      ATTEMPT=0
+
+      while [ $ATTEMPT -lt $MAX_ATTEMPTS ]; do
+        STATUS=$(curl -s -u "$SONAR_TOKEN": "$SONAR_HOST_URL/api/qualitygates/project_status?projectKey=$PROJECT_KEY" | jq -r '.projectStatus.status')
+        echo "$STATUS"
+        if [ "$STATUS" = "OK" ]; then
+          echo "✅ Quality Gate passed"
+          break
+        elif [ "$STATUS" = "ERROR" ]; then
+          echo "❌ Quality Gate failed"
+          exit 1
+        fi
+        sleep 10
+        ATTEMPT=$((ATTEMPT+1))
+      done
+
+      if [ $ATTEMPT -eq $MAX_ATTEMPTS ]; then
+        echo "⏰ Timeout waiting for Quality Gate"
+        exit 1
+      fi
 
 ## Сборка и пуш Docker-образа
 docker:
